[package]
name = "space"
version = "0.1.0"
authors = ["KyleBCox <kylecoxforweb@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"

[dependencies]
pc-keyboard = "0.3.1"
pic8259_simple = "0.1.1"
x86_64 = "0.8.2"
bootloader = {version = "0.8.3", features = ["map_physical_memory"]}
volatile = "0.2.6"
spin = "0.5.2"
linked_list_allocator = "0.6.4"
[dependencies.lazy_static]
version = "1.0"
features = ["spin_no_std"]
